compilation warnings solved